--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ django-cors-headers==4.6.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 drf-spectacular==0.28.0
+gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+packaging==24.2
 psycopg2==2.9.10
 psycopg2-binary==2.9.9
 PyJWT==2.10.1
